--- a/index.html
+++ b/index.html
@@ -326,5 +326,6 @@
         </button>
       </form>
     </div>
+    <img src="./forkify-architecture-recipe-loading.png" alt="" />
   </body>
 </html>
